tests/ui/serde/serde.stderr
error: Found conflicting `#[serde(bound ...)]`
  --> tests/ui/serde/serde.rs:10:9
   |
10 | #[serde(bound = "")]
   |         ^^^^^^^^^^
